--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,3 +1,15 @@
+/* Custom */
+
+.angular-google-map-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 95px;
+  border-top: 1px solid #DDD;
+}
+
 /* Opacity */
 .opacity-0 {
   opacity: 0;
@@ -147,7 +159,7 @@
 }
 
 .profile-picture {
-  padding: 20px 20px;
+  padding: 0 20px;
   text-align: center;
 }
 
@@ -161,7 +173,7 @@
 }
 
 .stats-label small {
-  font-size: 80%;
+  font-size: 85%;
   line-height: 0.6;
 }
 
@@ -186,6 +198,10 @@
 }
 
 /* Menu */
+.side-menu {
+  width: 180px;
+}
+
 #side-menu {
   background: @color-bright;
 }
