changed uservoice to help icon

--- a/app/views/common/header.html
+++ b/app/views/common/header.html
@@ -11,7 +11,12 @@
     <div class="navbar-right">
         <ul class="nav navbar-nav no-borders">
             <li class="dropdown">
-                <a tooltip-placement="left" tooltip="Sign Out" ng-click="global.logout()">
+                <a tooltip-placement="left" tooltip="Help" data-uv-trigger>
+                    <i class="pe-7s-help1"></i>
+                </a>
+            </li>
+            <li class="dropdown">
+                <a tooltip-placement="bottom" tooltip="Sign Out" ng-click="global.logout()">
                     <i class="pe-7s-upload pe-rotate-90"></i>
                 </a>
             </li>
