--- a/app/less/various.less
+++ b/app/less/various.less
@@ -10,6 +10,11 @@
   border-top: 1px solid #DDD;
 }
 
+footer {
+  padding: 1%;
+  margin-left: -25px;
+}
+
 /* Opacity */
 .opacity-0 {
   opacity: 0;
@@ -174,7 +179,7 @@
 
 .stats-label small {
   font-size: 85%;
-  line-height: 0.6;
+  line-height: 2;
 }
 
 .stats-box-value {
@@ -298,12 +303,13 @@
 }
 
 .navbar-nav > li > a {
-  padding: 15px 25px;
+  //padding: 15px 25px;
   font-size: 25px;
 }
 
 .navbar-nav > li:last-child > a {
-  padding-right: 35px;
+  margin-right: 15px;
+  padding-right: 30px;
 }
 
 .navbar.navbar-static-top .hide-menu {
