--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,13 +1,10 @@
 /* Custom */
 
 .angular-google-map-container {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  width: 180px;
   height: 95px;
   border-top: 1px solid #DDD;
+  margin-left: -20px;
 }
 
 footer {
@@ -164,7 +161,7 @@ footer {
 }
 
 .profile-picture {
-  padding: 0 20px;
+  padding: 0 5px 0 20px;
   text-align: center;
 }
 
@@ -205,6 +202,15 @@ footer {
 /* Menu */
 .side-menu {
   width: 180px;
+}
+
+.side-menu.filler {
+  background: #fff;
+  height: 14px;
+  margin-top: -14px;
+  margin-left: -20px;
+  position: relative;
+  border-top: 1px solid #DDD;
 }
 
 #side-menu {
