--- a/app/views/common/navigation.html
+++ b/app/views/common/navigation.html
@@ -1,29 +1,33 @@
 <div id="navigation">
     <div class="profile-picture">
-        <ui-gmap-google-map center='global.map.center' zoom='global.map.zoom' options='global.map.options'></ui-gmap-google-map>
-        <div style="background: #fff; height: 14px; position: absolute; bottom: 0; left: 0; right: 0; top: 82px;"></div>
-        <div class="stats-label text-color" style="padding-top: 93px;">
-            <div class="dropdown" dropdown style="padding-bottom: 3px;">
+        <div class="stats-label text-color" style="padding-top: 10px; padding-bottom: 4px;">
+            <div class="dropdown" dropdown style="padding-bottom: 5px; margin-left: -15px;">
                 <a dropdown-toggle class="dropdown-toggle" href="#">
-                    <span class="font-extra-bold font-uppercase">{{global.findKey(global.community.locations, global.context.location, [])[0].profile.name}} </span><b class="caret"></b></a>
+                    <i class="fa fa-globe" style="color: #777;">&nbsp;&nbsp;</i>
+                    <span class="font-extra-bold font-uppercase">{{global.findKey(global.community.locations, global.context.location, [])[0].profile.name}} </span><b class="caret" style="color: #999;"></b></a>
                 <ul class="dropdown-menu animated m-t-xs">
                     <li><a ui-sref="app_views.contacts">Change Location</a></li>
                     <li class="divider"></li>
                     <li><a ui-sref="common.login">Set as Home</a></li>
                 </ul>
-                <small class="text-muted">{{global.user.profile.name}}&nbsp;&nbsp;</small>
-            </div>
-            <div class="container side-menu" style="padding: 10px 0 0 0; border-bottom: 1px solid #eee; border-bottom: 1px solid #eee;">
-                <div class="row side-menu">
-                    <div class="col-md-6" style="padding-left: 0;">
-                        <img class="img-circle m-b" ng-src="{{global.user.profile.avatar || global.user.profile.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{global.user.profile.name}}" style="height: 40px; width: 40px; "/>
-                    </div>
-                    <div class="col-md-6">
-                        Stats
-                    </div>
-                </div>
             </div>
         </div>
+
+        <ui-gmap-google-map center='global.map.center' zoom='global.map.zoom' options='global.map.options'></ui-gmap-google-map>
+        <div class="side-menu filler"></div>
+
+        <div class="container side-menu" style="border-bottom: 1px solid #eee; margin-left: -20px;">
+            <div class="row side-menu">
+                <div class="col-md-3">
+                    <img class="img-circle m-b" ng-src="{{global.user.profile.avatar || global.user.profile.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{global.user.profile.name}}" style="height: 40px; width: 40px; "/>
+                </div>
+                <div class="col-md-9">
+                    <p class="text-muted">{{global.user.profile.name}}&nbsp;&nbsp;</p>
+                </div>
+
+            </div>
+        </div>
+
     </div>
 
     <ul side-navigation class="nav" id="side-menu">
