--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -7,13 +7,88 @@
 <!-- Main Wrapper -->
 <div id="wrapper">
 
-<div class="content" animate-panel effect="zoomIn">
-<div class="row">
-    <div class="col-lg-12 text-center m-t-md">
-        <h2>
-            Welcome to StartupCommunity.org
-        </h2>
+    <div class="content" animate-panel effect="zoomIn">
+        <div class="row">
+            <div class="col-lg-12 text-center m-t-md">
+
+                <div class="hpanel">
+                    <div class="panel-heading">
+                        <div panel-tools></div>
+                        Recently active projects
+                    </div>
+                    <div class="panel-body list">
+                        <div class="table-responsive project-list">
+                            <table class="table table-striped">
+                                <thead>
+                                <tr>
+
+                                    <th colspan="2">Project</th>
+                                    <th>Completed</th>
+                                    <th>Task</th>
+                                    <th>Date</th>
+                                    <th>Action</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td><input icheck type="checkbox" ng-model="checkOne"></td>
+                                    <td>Contract with Zender Company
+                                        <br/>
+                                        <small><i class="fa fa-clock-o"></i> Created 14.08.2015</small>
+                                    </td>
+                                    <td>
+                                        <pie-chart data="PieChart4.data" options="PieChart4.options"></pie-chart>
+                                    </td>
+                                    <td><strong>20%</strong></td>
+                                    <td>Jul 14, 2013</td>
+                                    <td><a href=""><i class="fa fa-check text-success"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <td><input icheck type="checkbox" ng-model="unCheck1"></td>
+                                    <td>There are many variations of passages
+                                        <br/>
+                                        <small><i class="fa fa-clock-o"></i> Created 21.07.2015</small>
+                                    </td>
+                                    <td>
+                                        <pie-chart data="PieChart3.data" options="PieChart3.options"></pie-chart>
+                                    </td>
+                                    <td><strong>40%</strong></td>
+                                    <td>Jul 16, 2013</td>
+                                    <td><a href=""><i class="fa fa-check text-navy"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <td><input icheck type="checkbox" ng-model="checkOne"></td>
+                                    <td>Contrary to popular belief
+                                        <br/>
+                                        <small><i class="fa fa-clock-o"></i> Created 12.06.2015</small>
+                                    </td>
+                                    <td>
+                                        <pie-chart data="PieChart2.data" options="PieChart2.options"></pie-chart>
+                                    </td>
+                                    <td><strong>75%</strong></td>
+                                    <td>Jul 18, 2013</td>
+                                    <td><a href=""><i class="fa fa-check text-navy"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <td><input icheck type="checkbox" ng-model="unCheck3"></td>
+                                    <td>Gamma project
+                                        <br/>
+                                        <small><i class="fa fa-clock-o"></i> Created 06.03.2015</small>
+                                    </td>
+                                    <td>
+                                        <pie-chart data="PieChart5.data" options="PieChart5.options"></pie-chart>
+                                    </td>
+                                    <td><strong>16%</strong></td>
+                                    <td>Jul 22, 2013</td>
+                                    <td><a href=""><i class="fa fa-check text-navy"></i></a></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
-</div>
-</div>
 </div>
