map is working fuck

--- a/app/views/common/navigation.html
+++ b/app/views/common/navigation.html
@@ -13,7 +13,7 @@
             </div>
         </div>
 
-        <ui-gmap-google-map center='global.map.center' zoom='global.map.zoom' options='global.map.options'></ui-gmap-google-map>
+        <map center="{{global.map}}" zoom="7" disable-default-u-i="true"></map>
         <div class="side-menu filler"></div>
 
         <div class="container side-menu" style="border-bottom: 1px solid #eee; margin-left: -20px;">
