--- a/app/views/common/navigation.html
+++ b/app/views/common/navigation.html
@@ -18,13 +18,13 @@
 
         <div class="container side-menu" style="border-bottom: 1px solid #eee; margin-left: -20px;">
             <div class="row side-menu">
-                <div class="col-md-3">
-                    <img class="img-circle m-b" ng-src="{{global.user.profile.avatar || global.user.profile.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{global.user.profile.name}}" style="height: 40px; width: 40px; "/>
+                <div class="col-sm-3">
+                    <a ui-sref="profile({user: global.user, test: 'test'})"><img class="img-circle m-b" ng-src="{{global.user.profile.avatar || global.user.profile.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{global.user.profile.name}}" style="height: 40px; width: 40px; "/>
                 </div>
-                <div class="col-md-9">
-                    <p class="text-muted">{{global.user.profile.name}}&nbsp;&nbsp;</p>
+                <div class="col-sm-9">
+                    <p>{{global.user.profile.name}}&nbsp;&nbsp;</p>
                 </div>
-
+                </a>
             </div>
         </div>
 
