--- a/app/less/panels.less
+++ b/app/less/panels.less
@@ -160,11 +160,12 @@
 }
 
 .small-header .panel-body {
-  padding: 15px 25px;
+  padding: 0 25px;
   border-right: none;
   border-left: none;
   border-top: none;
   border-radius: 0;
+  height: 35px;
   //  background: @color-bright;
 }
 
@@ -176,7 +177,7 @@
   font-size: 14px;
   font-weight: 100;
   text-transform: uppercase;
-  margin: 0 0 0 0;
+  margin: 9px 0 0 0;
 }
 
 .small-header .panel-body small {
@@ -185,7 +186,7 @@
 
 .hbreadcrumb {
   padding: 2px 0px;
-  margin-top: 6px;
+  margin-top: 7px;
   margin-bottom: 0px;
   list-style: none;
   background-color: #fff;
