--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,6 +1,6 @@
 /* Custom */
 
-map {
+#nav-map {
   width: 180px;
   height: 95px;
   border-top: 1px solid #DDD;
@@ -22,7 +22,7 @@ footer {
 
 /* Google Maps */
 .google-map {
-  height: 300px;
+  height: 150px;
 }
 
 .hr-line-dashed {
