--- a/app/views/user/user.profile.html
+++ b/app/views/user/user.profile.html
@@ -18,20 +18,16 @@
                 <progressbar value="65" type="success" class="progress-small full progress-striped active"></progressbar>
             </div>
             <div class="border-right border-left">
-                <section id="map" ng-controller="googleMapCtrl">
-                    <div ui-map="myMap" ui-options="mapOptions" style="height: 200px"></div>
+                <section id="map">
+                    <map center="Portland, OR" zoom="7" disable-default-u-i="true"></map>
                 </section>
             </div>
             <div class="panel-body">
-                <dl>
-                    <dt>Description lists</dt>
-                    <dd>A description list is perfect for defining terms.</dd>
-                    <dt>Euismod</dt>
-                    <dd>Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.</dd>
-                    <dd>Donec id elit non mi porta gravida at eget metus.</dd>
-                    <dt>Malesuada porta</dt>
-                    <dd>Etiam porta sem malesuada magna mollis euismod.</dd>
-                </dl>
+                <div class="row">
+                    <div class="col-md-6">
+
+                    </div>
+                </div>
             </div>
             <div class="panel-footer contact-footer">
                 <div class="row">
