--- a/app/views/common/content_blank.html
+++ b/app/views/common/content_blank.html
@@ -1,3 +1,4 @@
+<!-- We add local padding for demo purpose only to add extra space -->
 <!-- Header -->
 <div id="header" ng-include="'views/common/header.html'"></div>
 
@@ -6,7 +7,9 @@
 
 <!-- Main Wrapper -->
 <div id="wrapper">
-    <div class="content" animate-panel effect="zoomIn">
-        <div ui-view></div>
-    </div>
+
+    <div ui-view style="padding:40px"></div>
+
+</div>
+</div>
 </div>
