--- a/app/views/common/navigation.html
+++ b/app/views/common/navigation.html
@@ -8,18 +8,18 @@
                 <ul class="dropdown-menu animated m-t-xs">
                     <li><a ui-sref="app_views.contacts">Change Location</a></li>
                     <li class="divider"></li>
-                    <li><a ui-sref="common.login">Set as Home</a></li>
+                    <li><a ui-sref="common.login"><i class="fa fa-home"></i> Set as Home</a></li>
                 </ul>
             </div>
         </div>
 
-        <map center="{{global.map}}" zoom="7" disable-default-u-i="true"></map>
+        <map id="nav-map" center="{{global.findKey(global.community.locations, global.context.location, [])[0].profile.name}}" zoom="7" disable-default-u-i="true"></map>
         <div class="side-menu filler"></div>
 
         <div class="container side-menu" style="border-bottom: 1px solid #eee; margin-left: -20px;">
             <div class="row side-menu">
                 <div class="col-sm-3">
-                    <a ui-sref="profile({user: global.user, test: 'test'})"><img class="img-circle m-b" ng-src="{{global.user.profile.avatar || global.user.profile.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{global.user.profile.name}}" style="height: 40px; width: 40px; "/>
+                    <a ui-sref="user.profile({user: global.user, test: 'test'})"><img class="img-circle m-b" ng-src="{{global.user.profile.avatar || global.user.profile.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{global.user.profile.name}}" style="height: 40px; width: 40px; "/>
                 </div>
                 <div class="col-sm-9">
                     <p>{{global.user.profile.name}}&nbsp;&nbsp;</p>
