--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,11 +1,5 @@
 /* Custom */
 
-#nav-map {
-  width: 180px;
-  height: 95px;
-  border-top: 1px solid #DDD;
-  margin-left: -20px;
-}
 
 footer {
   padding: 1%;
@@ -21,7 +15,15 @@ footer {
 }
 
 /* Google Maps */
-.google-map {
+
+#nav-map {
+  width: 180px;
+  height: 95px;
+  border-top: 1px solid #DDD;
+  margin-left: -20px;
+}
+
+.profile-map {
   height: 150px;
 }
 
