working map on profile page too

--- a/app/less/panels.less
+++ b/app/less/panels.less
@@ -15,8 +15,8 @@
   color: inherit;
   border: 1px solid @border-color;
   border-top: none;
-  font-size: 90%;
   background: @color-bright;
+  line-height: 1.5;
 }
 
 .hpanel.panel-collapse > .panel-heading, .hpanel .hbuilt {
