--- a/app/less/various.less
+++ b/app/less/various.less
@@ -19,12 +19,12 @@ footer {
 #nav-map {
   width: 180px;
   height: 95px;
-  border-top: 1px solid #DDD;
   margin-left: -20px;
+  margin-top: -10px;
 }
 
-.profile-map {
-  height: 150px;
+#profile-map {
+  height: 125px;
 }
 
 .hr-line-dashed {
