--- a/app/views/common/navigation.html
+++ b/app/views/common/navigation.html
@@ -1,20 +1,21 @@
 <div id="navigation">
     <div class="profile-picture">
-        <div class="stats-label text-color" style="padding-top: 10px; padding-bottom: 4px;">
-            <div class="dropdown" dropdown style="padding-bottom: 5px; margin-left: -15px;">
+        <div class="stats-label text-color" style="padding-top: 10px; padding-bottom: 10px;">
+            <div class="dropdown side-menu" dropdown style="padding-bottom: 9px; margin-left: -20px; border-bottom: 1px solid #ddd;">
                 <a dropdown-toggle class="dropdown-toggle" href="#">
                     <i class="fa fa-globe" style="color: #777;">&nbsp;&nbsp;</i>
                     <span class="font-extra-bold font-uppercase">{{global.findKey(global.community.locations, global.context.location, [])[0].profile.name}} </span><b class="caret" style="color: #999;"></b></a>
-                <ul class="dropdown-menu animated m-t-xs">
+                <ul class="dropdown-menu animated m-t-xs" style="margin-top: -5px; margin-left: 60px;">
                     <li><a ui-sref="app_views.contacts">Change Location</a></li>
                     <li class="divider"></li>
                     <li><a ui-sref="common.login"><i class="fa fa-home"></i> Set as Home</a></li>
                 </ul>
             </div>
         </div>
-
-        <map id="nav-map" center="{{global.findKey(global.community.locations, global.context.location, [])[0].profile.name}}" zoom="11" disable-default-u-i="true"></map>
-        <div class="side-menu filler"></div>
+        <div map-lazy-load="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXO1cNiJac7iP2I3JoXhOd1pWs6gA-f4k">
+            <map id="nav-map" center="{{global.findKey(global.community.locations, global.context.location, [])[0].profile.name}}" zoom="11" disable-default-u-i="true"></map>
+            <div class="side-menu filler"></div>
+        </div>
 
         <div class="container side-menu" style="border-bottom: 1px solid #eee; margin-left: -20px;">
             <div class="row side-menu">
