--- a/app/less/panels.less
+++ b/app/less/panels.less
@@ -165,7 +165,7 @@
   border-left: none;
   border-top: none;
   border-radius: 0;
-  height: 35px;
+  min-height: 35px;
   //  background: @color-bright;
 }
 
@@ -178,6 +178,7 @@
   font-weight: 100;
   text-transform: uppercase;
   margin: 9px 0 0 0;
+  padding-bottom: 10px;
 }
 
 .small-header .panel-body small {
