--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,9 +1,19 @@
 /* Custom */
 
+.footwrap {
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  margin-bottom: -50px;
+}
 
 footer {
   padding: 1%;
   margin-left: -25px;
+}
+
+footer, .push {
+  height: 50px;
 }
 
 /* Opacity */
@@ -24,7 +34,8 @@ footer {
 }
 
 #profile-map {
-  height: 125px;
+  height: 158px;
+  border: 1px solid #ddd;
 }
 
 .hr-line-dashed {
