--- a/app/views/common/header.html
+++ b/app/views/common/header.html
@@ -5,18 +5,40 @@
 </div>
 <nav role="navigation">
         <minimaliza-menu></minimaliza-menu>
-    <div class="small-logo">
-        <span class="text-primary">StartupCommunity.org</span>
+    <div class="navbar-left">
+        <div class="nav navbar-nav no-borders container-fluid">
+            <div class="row" style="margin-top: 20px; margin-left: 0;">
+                <div class="col-xs-3 col-sm-1" style="text-align: center;">
+                    <a ui-sref="people"><i class="pe-7s-id" style="font-size: 25px;"></i>
+                        <div class="visible-xs" style="margin-top: -5px;"><small>People</small></div>
+                    </a>
+                </div>
+                <div class="col-sm-4 col-md-4 col-lg-4 hidden-xs">
+                    <a ui-sref="people"><h2 style="margin-top: -5px;">
+                        &nbsp;People</h2>
+                    </a>
+                </div>
+                <div class="col-xs-3 col-sm-1" style="text-align: center;">
+                    <a ui-sref="startups"><i class="pe-7s-power" style="font-size: 25px;"></i>
+                        <div class="visible-xs" style="margin-top: -5px;"><small>Startups</small></div></a>
+                </div>
+                <div class="col-sm-4 col-md-4 col-lg-4 hidden-xs">
+                    <a ui-sref="startups"><h2 style="margin-top: -5px;">
+                    &nbsp;Startups</h2>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="navbar-right">
+    <div class="navbar-right hidden-xs">
         <ul class="nav navbar-nav no-borders">
             <li class="dropdown">
-                <a tooltip-placement="left" tooltip="Help" data-uv-trigger>
+                <a tooltip-placement="left" tooltip="Help">
                     <i class="pe-7s-help1"></i>
                 </a>
             </li>
             <li class="dropdown">
-                <a tooltip-placement="bottom" tooltip="Sign Out" ng-click="global.logout()">
+                <a tooltip-placement="bottom" tooltip="Sign Out" ng-click="global.logout()" style="padding-right: 30px;">
                     <i class="pe-7s-upload pe-rotate-90"></i>
                 </a>
             </li>
