--- a/app/views/common/navigation.html
+++ b/app/views/common/navigation.html
@@ -1,22 +1,23 @@
 <div id="navigation">
+    <div class="navbar-right visible-xs">
+        <ul class="nav navbar-nav no-borders">
+            <li class="dropdown" style="display: inline-block;">
+                <a>
+                    <i class="pe-7s-help1"></i>
+                </a>
+            </li>
+            <li class="dropdown" style="display: inline-block;">
+                <a ng-click="global.logout()">
+                    <i class="pe-7s-upload pe-rotate-90"></i>
+                </a>
+            </li>
+        </ul>
+    </div>
     <div class="profile-picture">
-        <div class="stats-label text-color" style="padding-top: 10px; padding-bottom: 10px;">
-            <div class="dropdown side-menu" dropdown style="padding-bottom: 9px; margin-left: -20px; border-bottom: 1px solid #ddd;">
-                <a dropdown-toggle class="dropdown-toggle" href="#">
-                    <i class="fa fa-globe" style="color: #777;">&nbsp;&nbsp;</i>
-                    <span class="font-extra-bold font-uppercase">{{global.findKey(global.community.locations, global.context.location, [])[0].profile.name}} </span><b class="caret" style="color: #999;"></b></a>
-                <ul class="dropdown-menu animated m-t-xs" style="margin-top: -5px; margin-left: 60px;">
-                    <li><a ui-sref="app_views.contacts">Change Location</a></li>
-                    <li class="divider"></li>
-                    <li><a ui-sref="common.login"><i class="fa fa-home"></i> Set as Home</a></li>
-                </ul>
-            </div>
-        </div>
         <div map-lazy-load="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXO1cNiJac7iP2I3JoXhOd1pWs6gA-f4k">
             <map id="nav-map" center="{{global.findKey(global.community.locations, global.context.location, [])[0].profile.name}}" zoom="11" disable-default-u-i="true"></map>
             <div class="side-menu filler"></div>
         </div>
-
         <div class="container side-menu" style="border-bottom: 1px solid #eee; margin-left: -20px;">
             <div class="row side-menu">
                 <div class="col-sm-3">
@@ -32,14 +33,11 @@
     </div>
 
     <ul side-navigation class="nav" id="side-menu">
-        <li ui-sref-active="active" class="active">
-            <a href="#"><span class="nav-label">Community</span><span class="fa arrow"></span> </a>
-            <ul class="nav nav-second-level" ng-class="{in: $state.includes('people')}">
-                <li ui-sref-active="active">
-                    <a ui-sref="people"><i class="fa fa-flag"></i>&nbsp;&nbsp;People</a>
-                </li>
-                <li ui-sref-active="active">
-                    <a ui-sref="startups"><i class="fa fa-rocket"></i>&nbsp;&nbsp;Startups</a>
+        <li ng-class="{active: $state.includes('location')}" class="active">
+            <a href="#"><span class="nav-label">Locations</span><span class="fa arrow"></span> </a>
+            <ul class="nav nav-second-level" ng-class="{in: $state.includes('location')}">
+                <li ui-sref-active="active" ng-repeat="item in global.findKey(global.community.locations, global.context.location, [])">
+                    <a ui-sref="location"><i class="fa fa-globe"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
                 </li>
             </ul>
         </li>
