--- a/app/views/user/user.profile.html
+++ b/app/views/user/user.profile.html
@@ -4,7 +4,7 @@
             <div class="panel-body">
                 <div class="row">
                     <div class="col-sm-9">
-                        <div class="col-sm-2">
+                        <div class="col-sm-2 col-lg-1">
                             <img class="img-circle m-b" style="height:75px;" ng-src="{{global.profile.profile.avatar || global.profile.profile.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{::global.profile.profile.name}}">
                         </div>
                         <div class="col-sm-10" style="height: 125px;">
