fucking header nav done

--- a/app/views/common/header.html
+++ b/app/views/common/header.html
@@ -6,27 +6,39 @@
 <nav role="navigation">
         <minimaliza-menu></minimaliza-menu>
     <div class="navbar-left">
-        <div class="nav navbar-nav no-borders container-fluid">
-            <div class="row" style="margin-top: 20px; margin-left: 0;">
-                <div class="col-xs-3 col-sm-1" style="text-align: center;">
-                    <a ui-sref="people"><i class="pe-7s-id" style="font-size: 25px;"></i>
-                        <div class="visible-xs" style="margin-top: -5px;"><small>People</small></div>
-                    </a>
-                </div>
-                <div class="col-sm-4 col-md-4 col-lg-4 hidden-xs">
-                    <a ui-sref="people"><h2 style="margin-top: -5px;">
-                        &nbsp;People</h2>
-                    </a>
-                </div>
-                <div class="col-xs-3 col-sm-1" style="text-align: center;">
-                    <a ui-sref="startups"><i class="pe-7s-power" style="font-size: 25px;"></i>
-                        <div class="visible-xs" style="margin-top: -5px;"><small>Startups</small></div></a>
-                </div>
-                <div class="col-sm-4 col-md-4 col-lg-4 hidden-xs">
-                    <a ui-sref="startups"><h2 style="margin-top: -5px;">
-                    &nbsp;Startups</h2>
-                    </a>
-                </div>
+        <div class="nav navbar-nav no-borders">
+            <div style="margin-top: 15px; margin-left: 0;">
+
+                    <div class="header-nav-link">
+                        <a ui-sref="people">
+                            <span>
+                                <div class="col-xs-3 col-sm-1" style="text-align: center;">
+                                    <i class="pe-7s-id" style="font-size: 25px; margin-top: 5px;"></i>
+                                        <div class="visible-xs"><p style="font-size:12px;">People</p></div>
+                                </div>
+                                <div class="col-sm-4 col-md-4 col-lg-4 hidden-xs">
+                                    <h2 style="margin-top: 0px;">&nbsp;People</h2>
+                                </div>
+                                </span>
+                        </a>
+                    </div>
+
+
+                    <div class="header-nav-link pushright">
+                        <a ui-sref="startups">
+                            <span>
+                                <div class="col-xs-3 col-sm-1" style="text-align: center;">
+                                    <i class="pe-7s-power" style="font-size: 25px; margin-top: 5px;"></i>
+                                        <div class="visible-xs"><p style="font-size:12px;">Startups</p></div>
+                                </div>
+
+                                <div class="col-sm-4 col-md-4 col-lg-4 hidden-xs">
+                                        <h2 style="margin-top: 0px;">Startups</h2>
+                                </div>
+                            </span>
+                        </a>
+                    </div>
+
             </div>
         </div>
     </div>
