--- a/app/views/user/user.profile.html
+++ b/app/views/user/user.profile.html
@@ -23,43 +23,7 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-md-3">
-                                <div class="hpanel">
-                                    <div class="panel-body">
-                                        <div class="table-responsive">
-                                            <table class="table table-striped">
-                                                <thead>
-                                                <tr>
-                                                    <th>Task</th>
-                                                    <th>Date</th>
-                                                </tr>
-                                                </thead>
-                                                <tbody>
-                                                <tr>
-                                                    <td>
-                                                        <span class="text-danger font-bold">Lorem ipsum</span>
-                                                    </td>
-                                                    <td>Jul 14, 2013</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                        <span class="text-danger font-bold">Lorem ipsum</span>
-                                                    </td>
-                                                    <td>Jul 09, 2015</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                        <span class="text-danger font-bold">Lorem ipsum</span>
-                                                    </td>
-                                                    <td>Jul 24, 2014</td>
-                                                </tr>
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                    </div>
 
-                                </div>
-                            </div>
                             <div class="col-sm-3">
                                 <div class="profile-label">Founder of</div>
                                 <small>3.0.0</small>
@@ -86,6 +50,45 @@
                 <h3>Summary</h3>
                 {{::global.profile.profile.linkedin.summary}}
             </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-3">
+        <div class="hpanel hgreen">
+            <div class="panel-body">
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th>Task</th>
+                            <th>Date</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>
+                                <span class="text-danger font-bold">Lorem ipsum</span>
+                            </td>
+                            <td>Jul 14, 2013</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span class="text-danger font-bold">Lorem ipsum</span>
+                            </td>
+                            <td>Jul 09, 2015</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span class="text-danger font-bold">Lorem ipsum</span>
+                            </td>
+                            <td>Jul 24, 2014</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
