--- a/app/views/user/user.profile.html
+++ b/app/views/user/user.profile.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" ng-controller="ProfileController">
     <div class="col-lg-12">
         <div class="hpanel hgreen">
             <div class="panel-body">
@@ -23,7 +23,10 @@
                         </div>
 
                         <div class="row">
-
+                            <div class="col-sm-3">
+                                <div class="profile-label">Leader of</div>
+                                <small>3.0.0</small>
+                            </div>
                             <div class="col-sm-3">
                                 <div class="profile-label">Founder of</div>
                                 <small>3.0.0</small>
