--- a/app/less/various.less
+++ b/app/less/various.less
@@ -5,19 +5,18 @@
 }
 
 .footwrap {
-  min-height: 100%;
+  //min-height: 100%;
   height: auto !important;
-  height: 100%;
-  margin-bottom: -50px;
 }
 
 footer {
   padding: 1%;
   margin-left: -25px;
+  display: none;
 }
 
 footer, .push {
-  height: 50px;
+  height: 60px;
 }
 
 .header-nav-link :hover {
